# AoC2023

./: LICENSE  README.md  pyproject.toml
aoc2023/: cli.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  modules.py
tests/: examples.pkl  gather_examples.py  test_aoc2023.py
